Se soluciono el ajuste de margen, se elimino el nosotros del header

--- a/Proyecto Redes/index.html
+++ b/Proyecto Redes/index.html
@@ -58,9 +58,7 @@
                            <div class="collapse navbar-collapse" id="navbarsExample04">
                               <nav id="navbarExample0001">
                               <ul class="navbar-nav mr-auto">
-                                 <li class="nav-item active">
-                                    <a class="nav-link" href="./SobreNosotros.html"> Nosotros </a>
-                                 </li> 
+                                 
                                  <li class="nav-item" onmouseover="hover(this);" onmouseout="out(this);"><a class="nav-link" href="#">Seguridad en la comunicación &nbsp;</a>
                                     <div class="dd">
                                       <div id="up_arrow"></div>
@@ -88,7 +86,7 @@
                                     <div class="dd">
                                       <div id="up_arrow"></div>
                                     <ul>
-                                       <li><a href="./seguridadweb/https.html">por def</a></li>
+                                       <li><a href="./seguridadweb/https.html">por definir un elemento</a></li>
                                        <li><a href="./seguridadweb/ssl.html">por def</a></li>
                                        <li><a href="./seguridadweb/certificado-ssl.html">por def</a></li>
                                     </ul>
@@ -99,7 +97,7 @@
                                     <div class="dd">
                                       <div id="up_arrow"></div>
                                     <ul>
-                                       <li><a href="./seguridadweb/https.html">por defnir</a></li>
+                                       <li><a href="./seguridadweb/https.html">por defnir segundo elemento</a></li>
                                        <li><a href="./seguridadweb/ssl.html">por def</a></li>
                                        <li><a href="./seguridadweb/certificado-ssl.html">por def</a></li>
                                     </ul>
