--- a/seguridadcomunicacion/redperimetral.html
+++ b/seguridadcomunicacion/redperimetral.html
@@ -39,7 +39,7 @@
                 <li><a href="../seguridadweb/certificado-ssl.html">Certificado SSL</a></li>
               </ul>
               </div>
-              <li><a href="#">Programación con Sockets</a></li>
+              <li><a href="../sockets/socket.html">Programación con Sockets</a></li>
               <li><a href="#">Internet de las Cosas</a></li>
               <li><a href="#">Nosotros</a></li>
           </ul>
