--- a/seguridadweb/certificado-ssl.html
+++ b/seguridadweb/certificado-ssl.html
@@ -38,7 +38,7 @@
                 <li><a href="#">Certificado SSL</a></li>
               </ul>
               </div>
-              <li><a href="#">Programación con Sockets</a></li>
+              <li><a href="../sockets/socket.html">Programación con Sockets</a></li>
               <li><a href="#">Internet de las Cosas</a></li>
               <li><a href="#">Nosotros</a></li>
           </ul>
