--- a/html/seguridadcomunicacion/seguridad.html
+++ b/html/seguridadcomunicacion/seguridad.html
@@ -19,7 +19,7 @@
   
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
-    <title>HTTPS</title>
+    <title>Redes Perimetrales</title>
 </head>
 
 <body>
@@ -109,73 +109,26 @@
      <!-- end header inner -->
     
     <article>
-        <h1>HTTPS</h1>
-    <img class="imagen" src="./imgs/img-portada-https.jpg" alt="">
-        <h3>Definición de HTTPS</h3>
-        <p>HTTPS (HTTP Secure) es un protocolo que permite establecer una conexión segura
-            entre el servidor y el cliente, que no puede ser interceptada por personas no autorizadas. En resumidas
-            cuentas, es la versión segura de el http (Hyper Text Transfer Protocol)</p>
-        <h3>Cómo funciona</h3>
-        <p>Una conexión HTTP estándar en Internet puede ser fácilmente secuestrada por partes no autorizadas. El
-            propósito de una conexión HTTPS es evitar esto: encriptar los datos para asegurar una transmisión de datos
-            segura. La transmisión está encriptada y el servidor autenticado.</p>
-        <p>Cuando un usuario hace clic en un enlace o confirma una entrada de URL en la barra de direcciones con el
-            botón Enter, el navegador establece una conexión. El servidor presenta un certificado que lo autentica como
-            un proveedor genuino y confiable. Una vez que el cliente ha verificado la autenticidad, envía una clave de
-            sesión que sólo puede leer el servidor. Sobre la base de estos datos clave, ahora se puede realizar el
-            cifrado. Normalmente, se utiliza un certificado SSL.</p>
-        <h3>Antecedentes y objetivos</h3>
-        <p>El propósito de una conexión HTTPS es proteger los datos que se transmiten. Una conexión HTTP puede ser
-            fácilmente interceptada, permitiendo ataques específicos a individuos. Los datos introducidos por un usuario
-            en la ventana de su navegador son a menudo personales (información de la cuenta, correo electrónico,
-            información de la tarjeta de crédito, etc.) y deben protegerse de dicho acceso.</p>
-        <p>Otro problema es la suplantación de identidad (phishing), mediante la cual los datos introducidos por un
-            usuario se envían a personas no autorizadas que utilizan sitios web falsos. El uso de HTTPS en lugar de HTTP
-            puede evitar tanto la interceptación como el phishing. Esto último es posible con un certificado. En otras
-            palabras, el objetivo de HTTPS es proporcionar a los usuarios de Internet privacidad, seguridad y protección
-            de datos.</p>
-        <h3>Uso y relevancia</h3>
-        <p>HTTPS se utiliza para todos los sitios web en los que un usuario introduce datos. Un campo de aplicación
-            importante es la banca online. En cualquier lugar donde se utilice una cuenta protegida por contraseña,
-            sería sensato tener una conexión HTTPS. Esto incluye el acceso a redes sociales, o cuentas de correo
-            electrónico y de compras, en las que de otro modo se podría causar un gran daño personal con la adquisición
-            ilegal de datos personales. La información personal también puede ser enviada sin una cuenta. Si, por
-            ejemplo, un vuelo o unas vacaciones enteras se reservan en línea, entonces los datos aplicables deben ser
-            comunicados a los proveedores de una manera segura.</p>
-        <p>En su propio interés, cualquier usuario de Internet debe prestar atención a una conexión segura en el lugar
-            correcto y así proteger su privacidad. Si existe una conexión HTTPS se puede ver fácilmente en la barra de
-            direcciones. Mostrará "https" al principio e incluso se resalta en muchos casos. También se muestra un
-            pequeño icono de candado.</p>
-        <h3>Desventajas</h3>
-        <p>HTTPS tiene algunas desventajas en comparación con las conexiones HTTP. Sin embargo, son muy pocas y
-            deberían aceptarse como un compromiso por la seguridad que proporcionan.</p>
-        <ul>
-            <li>Hay cargos adicionales por certificados y costes crecientes con el aumento del tráfico. Estos pueden ser
-                particularmente altos. Especialmente para sitios web nuevos y pequeños, estas tarifas pueden llegar a
-                ser relativamente altas.</li>
-            <li>Con conexiones HTTPS, el contenido no puede almacenarse en caché. Pero la tendencia hacia un mayor ancho
-                de banda contrarresta esta desventaja.</li>
-            <li>Un punto débil es también el menor rendimiento resultante del uso del cifrado SSL. El servidor debe
-                realizar muchos más cálculos, aumentando así el tiempo de respuesta.</li>
-            <li>Los hosts virtuales no funcionan con HTTPS.</li>
-        </ul>
-        <h3>Ventajas</h3>
-        <p>Además de la ventaja obvia de la privacidad en línea, también hay otro pro. El uso de HTTPS no requiere
-            ninguna instalación de software adicional. Esto significa que puede ser utilizado sin restricciones por
-            cualquier persona. La autenticación con un certificado también inspira confianza en los clientes
-            potenciales.</p>
-        <h3>Diferencia con HTTP</h3>
-        <img class="imagen" class="imagen" src="./imgs/img-http-https.png" alt="">
-        <p>La principal diferencia es la seguridad. La tecnología es esencialmente la misma, pero HTTPS incluye
-            encriptación SSL. Por lo tanto, en principio es posible establecer todo Internet con conexiones HTTPS. Sin
-            embargo, debido a las desventajas antes mencionadas y por costumbre, casi nadie utiliza una conexión segura
-            cuando no es absolutamente necesaria.</p>
-        <h3>Seguridad</h3>
-        <p>Dado que la diferencia con HTTP es el uso de cifrado, la seguridad HTTPS depende únicamente de la técnica
-            de cifrado utilizada. Actualmente se trata de SSL, que generalmente se considera segura. Sin embargo, debe
-            tenerse en cuenta que una transmisión de datos segura por sí sola no es suficiente para protegerlos
-            completamente, sino que también debe ser almacenada de forma segura por el destinatario.</p>
-    </article>
+        <h1>La seguridad en las comunicaciones</h1>
+    <img class="imagen" src="./imgs/la-seguridad-en-las-comunicacionesMAIN.jpg" alt="Seguridad comunicaciones">
+        <p>La seguridad en las comunicaciones hace referencia al nivel de protección existente de la privacidad digital. Dentro de ella encontramos tres pilares fundamentales, que son las personas, los procesos y la tecnología. ¿Qué precauciones podemos tomar para evitar riesgos o fallos?</p>
+       <h2>¿Que es la seguridad de la comunicacion?</h2>
+       <p>El primer concepto del que debemos hablar es la seguridad de los datos, que también recibe el nombre de seguridad informática. Con independencia del tamaño o el tipo de empresa, es imprescindible proteger los datos de accesos sin autorización o de una posible corrupción.</p>
+    <p>Dentro de esta parte de la seguridad en las comunicaciones se incluye la encriptación, la tokenización y otras prácticas sobre la gestión de claves. Gracias a todas ellas se protegen los datos en cualquier aplicación o plataforma de una empresa.</p>
+    <p>En la actualidad, la seguridad en las comunicaciones recibe una parte importante de la inversión que se realiza. La ciberdefensa tiene como finalidad proteger los activos críticos. Esto es, la propia marca, el capital intelectual y toda la información relativa a su clientela.</p>
+<p>Para poder aplicar la seguridad en las comunicaciones, debemos tener en cuenta tres elementos que ya mencionamos. Estos son claves en las medidas que se tomen, y son las personas, los procesos y la tecnología.</p>
+<h3>Qué medidas podemos tomar</h3>
+<p>La seguridad está a la orden del día, y no solo en lo que respecta a la protección de datos. Así, los vehículos autónomos, las smart home o el Internet of Things son cada vez más populares en nuestra sociedad. Sin embargo, esta mejora en las conversaciones entre los diferentes dispositivos conectados implica también una serie de riesgos. De ahí que entre en juego la seguridad en las comunicaciones.</p>
+<p>Al estar conectados dichos dispositivos, infraestructuras, interfaces o la propia nube, aumentan las oportunidades para los hackers. Con el acceso a la red, pueden secuestrar datos, así como los propios sistemas. El llamado ransomware ha aumentado tanto la frecuencia como la gravedad de los ataques. ¿Y cómo podemos protegernos o prevenir estos ataques? A continuación vamos a ver algunos elementos de la seguridad en las comunicaciones.</p>
+<h3>Ingeniería en la seguridad de los datos</h3>
+<p>Se trata de construir defensas para proteger la red de posibles amenazas. Si bien esta ingeniería logra que podamos realizar ciertas actividades, la relativa a la seguridad en las comunicaciones se encarga de que otras no tengan lugar. En definitiva, consiste en diseñar sistemas que sean seguros, con arquitecturas específicas y diseños que bloqueen la red. Estos protegen los datos, los ordenadores y los servidores.</p>
+<h3>Encriptación</h3>
+<p>La encriptación se encarga de proteger todos aquellos datos o archivos que estén almacenados o que circulen por Internet. Dificulta el acceso a los mismos y solo pueden leerse cuando se cuenta con la clave correspondiente. Esta herramienta debe formar parte de la propia red y de la forma de trabajar, si queremos garantizar la seguridad en las comunicaciones.</p>
+<h3>Análisis de vulnerabilidad y control de intrusión</h3>
+<p>Los NIDS o sistemas de detección de intrusos se activan cuando alguna acción resulta sospechosa. Esta se marca para una posterior revisión y se recopila de forma automática información sobre el tráfico anómalo y lo comunican a los administradores.</p>
+<p>En lo que se refiere al análisis de la vulnerabilidad, un hacker busca algún agujero en el sistema a través del que poder acceder. Los analistas de la seguridad en las comunicaciones se encargan de detectar dichos espacios y cerrarlos.</p>
+<p>Existen otras herramientas para la seguridad en las comunicaciones que podemos implementar en nuestra organización. La revisión de la eficacia de estas de manera periódica, así como la actualización continua nos permitirán ahorrarnos problemas.</p>
+</article>
 
     <footer>
         <div class="footer">
